# pep2csv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
grammar/: generate.sh  pep_trace.g4
pep_examples/: with_address.trace
src/: FastGrammarlessParser.cpp  FastGrammarlessParser.hpp  PEPTracesListener.cpp  PEPTracesListener.h  PEPTracesVisitor.cpp  PEPTracesVisitor.h  TraceProperties.hpp  main.cpp
